infra/terraform/main.tf
# main.tf

# Resource Group
resource "azurerm_resource_group" "rg" {
  name     = "project2-teaf"
  location = "Italy North"    # غيّرها لو تبغى منطقة ثانية (مثلاً: East US)
  tags = {
    project = "devops-project2-ih"
    env     = "dev"
  }
}

# Virtual Network
resource "azurerm_virtual_network" "vnet" {
  name                = "project2-teaf-vnet"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location
  address_space       = ["10.0.0.0/16"]
  tags                = azurerm_resource_group.rg.tags
}

# Subnet: Web
resource "azurerm_subnet" "web_subnet" {
  name                 = "web-subnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.1.0/24"]
}

# Subnet: API
resource "azurerm_subnet" "api_subnet" {
  name                 = "api-subnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.2.0/24"]
}

# Subnet: DB
resource "azurerm_subnet" "db_subnet" {
  name                 = "db-subnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.3.0/24"]
}
